--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block extra_title %}
-    Landing
+    Home
 {% endblock %}
 {% block content %}
-    <h1>Landing</h1>
+    <h1>Home</h1>
 {% endblock %}
