--- a/home/templates/home/news.html
+++ b/home/templates/home/news.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block extra_title %}
-    Landing
+    News
 {% endblock %}
 {% block content %}
-    <h1>Landing</h1>
+    <h1>News</h1>
 {% endblock %}
